--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <section class="hero" id="hero">
-      <h1 class="fade-in">Dhananjaya</h1>
+      <h1 class="fade-in">DHANANJAYA</h1>
       <p class="tagline">Creating Tomorrow, Today.</p>
       <a href="#projects" class="cta-button">View My Work</a>
     </section>
