--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section id="resume" class="section fade-in">
       <h2>Resume</h2>
-      <a href="resume.pdf" class="download-btn" target="_blank"
+      <a href="DHANANJAYA_Resume.pdf" class="download-btn" target="_blank"
         >Download Resume</a
       >
     </section>
