--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
     <section id="projects" class="section fade-in">
       <h2>Projects</h2>
       <div class="project-grid">
-        <div class="project-card">Project 1</div>
+        <div class="project-card">
+          <img
+            src="https://www.behance.net/gallery/222708821/Brand-Identity-Drift-Quest-Travel"
+            alt="Brand-Identity-Drift-Quest-Travel"
+          />
+        </div>
         <div class="project-card">Project 2</div>
         <div class="project-card">Project 3</div>
       </div>
